fixed the vet add and vet edit forms so the divs align

--- a/app/assets/stylesheets/pages/vets/_new.scss
+++ b/app/assets/stylesheets/pages/vets/_new.scss
@@ -2,7 +2,7 @@
   background-size: cover;
   background-position: center center;
   background-image: no-repeat;
-  padding: 20px;
+  padding: 150px 0;
   background-image: image-url("paws.png");
   height: 100vh;
   align-items: center;
@@ -17,9 +17,11 @@
     margin-top: auto;
     margin-bottom: auto;
     background-color: $submit-button-green;
-    max-height: 700px;
-    width: 500px;
+    max-height: 800px;
+    //width: 500px;
     border-radius:3px;
+    overflow: auto;
+
     h4 {
      color:$submit-button-orange;
     font-family: 'Montserrat', sans-serif;
@@ -42,7 +44,7 @@
   }
 
 .form-bar-width {
-  max-height: 250px;
+  max-height: 200px;
 }
 
 .vet-new-buttons {
